--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,7 @@
     margin-top: 120px;
     overflow: auto;
     padding: 2%;
-    border: 1px solid blue;
+    border: 1px solid #000;
     position: relative;
 
     .pollAnswerContainer {
@@ -14,35 +14,41 @@
         width: 100%;
         overflow: auto;
 
-background-color: green !important;
+        .voteBar {
+            
+            height: 100%;
+            line-height: 42px;
+            text-align: center;
+  
+        }
+        .answer {
+
+        }
 
         ul {
             list-style: none;
             margin: 0;
             padding: 0;
             width: 100%;
-background-color: black !important;
+
             li {
                 padding: 12px 0px;
                 margin: 16px 0px;
                 height: 64px;
-                background-color: yellow !important;
-
+                
                 .voteBar {
             
-		            height: 100%;
-		            line-height: 42px;
-		            text-align: aqua;
-				background-color: blue !important;
-		        }
-
-                .answer {
-background-color: pink !important;
-        		}
-
-            	
+                    height: 100%;
+                    line-height: 42px;
+                    text-align: center;
+                   
+                }
             }
         }    
     }
     
+}
+
+#kissa {
+	background-color: #000;
 }
